[fix] gap

--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -3,7 +3,7 @@
     height: auto;
     text-align: center;
     margin-top: 50px;
-    gap: 20px;
+    gap: 100px;
 }
 
 .container-p {
