--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,4 +1,3 @@
-/*intro*/
 .container-intro {
     width: 100%;
     height: auto;
@@ -7,17 +6,14 @@
     align-items: center;
     justify-content: center;
     padding: 50px;
+    gap: 80px;
 }
 
 .container-intro-text {
     backdrop-filter: blur(20px);
     background: rgba(0, 0, 0, 0.3);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     color: white;
     box-shadow: 5px 5px 20px rgba(199, 189, 189, 0.973);
-    margin: 40px;
     border: 1px solid #2196F3;
     border-radius: 10px;
 }
@@ -47,15 +43,4 @@
         margin-right: 20px;
         backdrop-filter: blur(20px);
     }
-}
-
-.container-project-home {
-    width: 100%;
-    height: auto;
-    box-shadow: 5px 5px 20px rgba(199, 189, 189, 0.973);
-    backdrop-filter: blur(20px);
-    background: rgba(0, 0, 0, 0.3);
-    border: 1px solid #2196F3;
-    margin: 0 auto;
-    border-radius: 10px;
 }
